# ci-workflows

./: .coverage-floor  .gitignore  README.md  pyproject.toml
.github/: dependabot.yml  risk-paths.yml
.github/actions/extract-high-risk-globs/: README.md  action.yml
.github/scripts/: classify.mjs  codex-gate.mjs
.github/workflows/: audit-required-checks.yml  claude-adversarial-review.yml  claude-author-automerge.yml  claude-review.yml  codex-review.yml  coverage-floor.yml  dependabot-auto-merge.yml  lint.yml  openapi-types-drift.yml  pr-classify.yml  pr-codex-review.yml  pr-review.yml  prettier-autofix.yml  regression-convention.yml  safe-paths-automerge.yml  selftest.yml  tests-runner.yml  tty-tests.yml  verifier-on-high-risk.yml
scripts/: audit-required-checks-fleet.sh  validate-required-checks.sh  verifier-classify-diff.sh  verifier-redact-secrets.py
scripts/tests/: test_audit_required_checks_fleet.bats  test_verifier_classify_diff.bats  test_verifier_redact_secrets.py
selftest/: README.md  check_draft_gate_triggers.py  conftest.py  risk_patterns_corpus.txt  sample.py  test_automerge_hold_gate.sh  test_automerge_risk_patterns.sh  test_automerge_riskfile_gate.sh  test_bb_automerge_risk_patterns.sh  test_check_draft_gate_triggers.py  test_classify_bracket_guard.sh  test_classify_nocase.sh  test_pr_files_listing.sh  test_prettier_scope_failsafe.sh  test_prettier_symlink_filter.sh  test_sample.py  test_workflow_guards.py
tests/tty/: README.md  test_smoke_tty.py
