[project]
name = "ci-workflows-selftest"
version = "0.0.0"
description = "Self-test fixtures for ci-workflows reusable workflows. Not a published package."
requires-python = ">=3.13"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["selftest*"]

[dependency-groups]
dev = [
    "pexpect>=4.9.0",
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["selftest"]

[tool.coverage.run]
source = ["selftest"]
omit = ["selftest/test_*.py"]
