[project]
name = "ci-workflows-selftest"
version = "0.0.0"
description = "Self-test fixtures for ci-workflows reusable workflows. Not a published package."
requires-python = ">=3.13"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["selftest*"]

[dependency-groups]
dev = [
    "pexpect>=4.9.0",
    "pytest",
    "pytest-cov",
    # check_draft_gate_triggers.py parses workflow YAML rather than grepping it:
    # the transitive draft gate lives in a called reusable, so the caller has no
    # `draft` text to grep for. Without this declared, `uv run pytest` dies at
    # COLLECTION with ModuleNotFoundError and takes the whole selftest suite with it.
    "pyyaml",
]

[tool.pytest.ini_options]
testpaths = ["selftest"]

[tool.coverage.run]
source = ["selftest"]
omit = ["selftest/test_*.py"]
